styles/index_styles.css
/*
    Personal Website - Cover Page Stylesheet
    Filename:   index_styles.css

    Author:     Ryan Smaller
    Date:       4/13/25
*/
/* Header and Footer */
header, footer {
    font-size: 0.7em;
    text-align: center;
    border: 0.3em solid darkblue;
    margin: 0.2vh;
    height: 6vh;
    min-height: 30px;
    background-color: azure;
}

header h1 {
    line-height: 3vh;
}

footer h1 {
    line-height: 3vh;
    height: 100%;
    position: relative;
    top: 25%;
    padding-top: 0;
    margin-top: 0;
}

footer {
    position: relative;
    z-index: 0; /* Ensure the footer appears above other flexed elements when the viewport overlaps. */
}

/* Organizational Containers */
#body-div {
    display: flex;
    flex: 1;
    height: 84vh;
    margin: 0.2vh;
}

#greater-portrait-photo {
    flex: inherit; /* Ensure the div with portrait photo, about me, and navigation are all flexing to their maximum possible size to fill up the screen. */
    margin: 0.2vh;
}

#about-nav {
    display: flex;
    margin: 0.2vh;
    z-index: 1;
}

/* Individual Bordered Containers */
#my-story {
    background-color: azure;
    width: 32vw;
    height: 98.6%;
    border: 0.2em solid darkblue;
    margin: 0.2vh;
    padding-left: 0.2em;
    padding-right: 0.2em;
}

#portrait-photo {
    height: 49.5%;
    text-align: center; /* This centers the portrait image. */
    border: 0.2em solid darkblue;
    margin: 0.2vh;
    padding: 0;
    background-image: url("../resources/images/main/portrait-background.jpg") !important;
    background-repeat: repeat;
    background-color: azure;
}

#portrait-photo img {
    max-height: 100%;
}

#collage {
    width: 32vw;
    height: 98.6%;
    border: 0.2em solid darkblue;
    margin: 0.2vh;
    text-align: center;
    background-image: url("../resources/images/main/portrait-background2.jpg") !important;
    background-repeat: repeat;
    background-color: azure;
}

#collage img { /* Ensure images in the collage dynamically resize with viewport. */
    max-width: 100%;
}

#about-me {
    width: 50%;
    height: 40vh;
    padding-left: 0.2em;
    padding-right: 0.2em;
    border: 0.2em solid darkblue;
    margin: 0.2vh;
    background-color: azure;
}

/* Styling Instagram Embed */
.instagram-media { /* This selector and margin property are sourced from https://cavesocial.com/embed-instagram-photo-website-blog specifically for centering Instagram embeds. */
    margin: auto !important;
}

/* Navigation Menu */
#navbar {
    width: 16vw;
    height: 40vh;
    border: 0.2em solid darkblue;
    margin: 0.2vh;
    flex: 1;
}

#navbar p {
    border: 0.2em solid darkblue;
    margin: 0.2vh;
    /* height: 12.4vh; */
    height: calc(((40vh - 1.2em - 0.8vh) / 3));
    min-height: 30px;
    max-width: 98%;
    text-align: center;
    line-height: 11vh; /* centers text vertically */
    background-color: azure;
}

